<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txvAssinatura"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="12dp"
        android:text="@string/assinatura"
        app:layout_constraintEnd_toStartOf="@+id/txvValorAssinatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvValorTotal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="21dp"
        android:text="Valor Total"
        app:layout_constraintStart_toEndOf="@+id/txvTotal"
        app:layout_constraintTop_toBottomOf="@+id/txvValorChamadaCelular" />

    <TextView
        android:id="@+id/txvTotal"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:text="@string/valor_total"
        app:layout_constraintEnd_toStartOf="@+id/txvValorTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txvValorChamadaCelular"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/valor_chamada_celular"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/txvValorChamadaLocal" />

    <TextView
        android:id="@+id/txvChamadaLocal"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:text="@string/chamada_local"
        app:layout_constraintEnd_toStartOf="@+id/txvValorChamadaLocal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAssinatura" />

    <TextView
        android:id="@+id/txvValorChamadaLocal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/valor_chamada_local"
        app:layout_constraintStart_toEndOf="@+id/txvChamadaLocal"
        app:layout_constraintTop_toBottomOf="@+id/txvValorAssinatura" />

    <TextView
        android:id="@+id/txvValorAssinatura"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="286dp"
        android:text="@string/valor_assinatura"
        app:layout_constraintStart_toEndOf="@+id/txvAssinatura"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:text="@string/chamada_celular"
        app:layout_constraintEnd_toStartOf="@+id/txvValorChamadaCelular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvChamadaLocal" />

</androidx.constraintlayout.widget.ConstraintLayout>